# LinuxApplicationDevelopment2021

./: README.md
02_TerminalProject/: Show.c
03_Multifile/: Makefile  prog.c
03_TerminalProject/: Makefile  Show.c
04_Text/: numerator.sh  printer.sh  randomize.sh
05_Debugging/: Makefile  gdb-test1  gdb-test2  main.c  range.c
06_TracingFencing/: Makefile  libremove.c  move.c
06_TracingFencing/tests/: test-close1.sh  test-close2.sh  test-open1.sh  test-open2.sh  test-read.sh  test-remove-ld.sh  test-remove.sh  test-standard.sh  test-write.sh
07_Environmental/: AUTHORS  Makefile.am  NEWS  README  configure.ac  hash-test.sh  rhasher.c
08_Regexps/: CMakeLists.txt  README  esub.c  test.sh
09_Testing/: CMakeLists.txt  README.md  README.txt  buf.c  buf.h  tests.c
10_I18n/: CMakeLists.txt  README.txt  guess.c  guess.po
11_Documenting/: CMakeLists.txt  Doxygen.in  README.md  guess.c
12_PatchInstall/: CMakeLists.txt  README.md  config.h.in  guess.c  guess.po
